misskey/misskey.v


fn C.misskey_meta(client &C.MisskeyClient, meta &C.MisskeyMeta) int
fn C.misskey_notes_timeline(client &C.MisskeyClient, limit int, include_local_renotes int, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_notes_local_timeline(client &C.MisskeyClient, limit int, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_notes_local_timeline_full(client &C.MisskeyClient, opts voidptr, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_notes_global_timeline(client &C.MisskeyClient, limit int, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_notes_global_timeline_full(client &C.MisskeyClient, opts voidptr, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_notes_create(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, note_out &C.MisskeyNote) int
fn C.misskey_notes_show(client &C.MisskeyClient, note_id charptr, note_out &C.MisskeyNote) int
fn C.misskey_notes_delete(client &C.MisskeyClient, note_id charptr, note_id_out &byte) int
fn C.misskey_notes(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, channel_id charptr, limit int, offset int, user_id charptr, local_only int, reply int, renote int, with_files int, since_id charptr, until_id charptr, notes_out &&C.MisskeyNote, count_out &int) int
fn C.misskey_i_notifications(client &C.MisskeyClient, limit int, notifications_out &&C.MisskeyNotification, count_out &int) int
fn C.misskey_drive(client &C.MisskeyClient, info &C.MisskeyDriveInfo) int
fn C.misskey_drive_files(client &C.MisskeyClient, limit int, folder_id charptr, files_out &&C.MisskeyDriveFile, count_out &int) int
fn C.misskey_drive_files_create(client &C.MisskeyClient, file_path charptr, folder_id charptr, name charptr, file_out &C.MisskeyDriveFile) int
fn C.misskey_drive_files_delete(client &C.MisskeyClient, file_id charptr, file_id_out &byte) int
fn C.misskey_drive_files_update(client &C.MisskeyClient, file_id charptr, folder_id charptr, name charptr, file_out &C.MisskeyDriveFile) int
fn C.misskey_drive_files_find(client &C.MisskeyClient, hash charptr, files_out &&C.MisskeyDriveFile, count_out &int) int
fn C.misskey_drive_files_show(client &C.MisskeyClient, file_id charptr, url charptr, file_out &C.MisskeyDriveFile) int
fn C.misskey_drive_files_upload_from_url(client &C.MisskeyClient, url charptr, folder_id charptr, is_sensitive int, comment charptr, file_out &C.MisskeyDriveFile) int
fn C.misskey_drive_folders(client &C.MisskeyClient, limit int, folder_id charptr, folders_out &&C.MisskeyDriveFolder, count_out &int) int
fn C.misskey_drive_folders_create(client &C.MisskeyClient, name charptr, parent_id charptr, folder_out &C.MisskeyDriveFolder) int
fn C.misskey_drive_folders_delete(client &C.MisskeyClient, folder_id charptr, folder_id_out &byte) int
fn C.misskey_drive_folders_update(client &C.MisskeyClient, folder_id charptr, name charptr, parent_id charptr, folder_out &C.MisskeyDriveFolder) int
fn C.misskey_translate(client &C.MisskeyClient, note_id charptr, target_lang charptr, result_out &C.MisskeyTranslateResult) int
fn C.misskey_clips_list(client &C.MisskeyClient, clips_out &&C.MisskeyClip, count_out &int) int
fn C.misskey_clips_show(client &C.MisskeyClient, clip_id charptr, clip_out &C.MisskeyClip) int
fn C.misskey_clips_create(client &C.MisskeyClient, name charptr, description charptr, is_public int, clip_out &C.MisskeyClip) int
fn C.misskey_clips_update(client &C.MisskeyClient, clip_id charptr, name charptr, description charptr, is_public int, clip_out &C.MisskeyClip) int
fn C.misskey_clips_delete(client &C.MisskeyClient, clip_id charptr, clip_id_out &byte) int
fn C.misskey_clips_notes(client &C.MisskeyClient, clip_id charptr, limit int, notes_out &&C.MisskeyNote, count_out &int) int

fn C.misskey_free_notes(client &C.MisskeyClient, notes &C.MisskeyNote, count int)
fn C.misskey_free_notifications(client &C.MisskeyClient, notifications &C.MisskeyNotification, count int)
fn C.misskey_free_drive_files(client &C.MisskeyClient, files &C.MisskeyDriveFile, count int)
fn C.misskey_free_drive_folders(client &C.MisskeyClient, folders &C.MisskeyDriveFolder, count int)
fn C.misskey_free_clips(client &C.MisskeyClient, clips &C.MisskeyClip, count int)

pub enum StreamChannel {
	main           = 0
	home_timeline  = 1
	local_timeline = 2
	hybrid_timeline = 3
	global_timeline = 4
}

struct C.MisskeyStream {}

type StreamCallback = fn (msg_type string, body string, user_data voidptr)

fn C.misskey_stream_new(host charptr, token charptr) &C.MisskeyStream
fn C.misskey_stream_new_with_proxy(host charptr, token charptr, proxy &C.MisskeyProxy) &C.MisskeyStream
fn C.misskey_stream_free(stream &C.MisskeyStream)
fn C.misskey_stream_connect(stream &C.MisskeyStream, channel int, channel_id charptr) int
fn C.misskey_stream_disconnect(stream &C.MisskeyStream, channel_id charptr) int
fn C.misskey_stream_poll(stream &C.MisskeyStream, timeout_ms int) int
fn C.misskey_stream_send(stream &C.MisskeyStream, channel_id charptr, msg_type charptr, body charptr) int
fn C.misskey_stream_set_callback(stream &C.MisskeyStream, callback StreamCallback, user_data voidptr)
fn C.misskey_stream_subscribe_note(stream &C.MisskeyStream, note_id charptr) int
fn C.misskey_stream_unsubscribe_note(stream &C.MisskeyStream, note_id charptr) int

// Error codes
pub enum MisskeyError {
	ok                   = 0
	invalid_param        = 1
	network              = 2
	http                 = 3
	json                 = 4
	auth                 = 5
	alloc                = 6
	unknown              = 7
}

pub enum ProxyType {
	none   = 0
	http   = 1
	https  = 2
	socks4 = 3
	socks4a = 4
	socks5 = 5
}

// Note visibility (值与 C 枚举 MisskeyNoteVisibility 一致)
pub enum NoteVisibility {
	public     = int(C.MISSKEY_VISIBILITY_PUBLIC)     // 公开
	home      = int(C.MISSKEY_VISIBILITY_HOME)      // 主页（仅关注者可见）
	followers = int(C.MISSKEY_VISIBILITY_FOLLOWERS) // 仅关注者
	specified = int(C.MISSKEY_VISIBILITY_SPECIFIED) // 直接消息
}

struct C.MisskeyNoteVisibility {}

pub struct Proxy {
pub:
	proxy_type ProxyType
	host      string
	port      int
	username  string
	password  string
}

fn (e MisskeyError) str() string {
	return unsafe { cstring_to_vstring(C.misskey_error_str(int(e))) }
}

fn (e MisskeyError) detailed(c &Client) string {
	return unsafe { cstring_to_vstring(C.misskey_error_str_detail(c.c_client, int(e))) }
}

// Client wrapper
pub struct Client {
	c_client &C.MisskeyClient
mut:
	host string
}

pub fn new(host string) !&Client {
	c_client := C.misskey_client_new(host.str)
	if c_client == unsafe { nil } {
		return error('failed to create client')
	}
	return &Client{
		c_client: c_client
		host: host
	}
}

pub fn (c &Client) freeit() {
	C.misskey_client_free(c.c_client)
}

pub fn (c &Client) set_token(token string) {
	C.misskey_client_set_token(c.c_client, token.str)
}

pub fn (c &Client) host() string {
	return c.host
}

pub fn (c &Client) set_timeout(sec int) {
	C.misskey_client_set_timeout(c.c_client, sec)
}

pub fn (c &Client) set_debug(enable bool) {
	C.misskey_request_set_debug(c.c_client, if enable { 1 } else { 0 })
}

pub fn (c &Client) set_proxy(proxy Proxy) ! {
	mut c_proxy := C.MisskeyProxy{}
	c_proxy.proxy_type = int(proxy.proxy_type)

	if proxy.host.len > 0 {
		unsafe { C.strncpy(&char(c_proxy.host), proxy.host.str, 255) }
		c_proxy.port = proxy.port
	}

	if proxy.username.len > 0 {
		unsafe { C.strncpy(&char(c_proxy.username), proxy.username.str, 127) }
	}
	if proxy.password.len > 0 {
		unsafe { C.strncpy(&char(c_proxy.password), proxy.password.str, 127) }
	}

	ret := C.misskey_client_set_proxy(c.c_client, &c_proxy)
	if ret != 0 {
		return error('set_proxy failed: ${MisskeyError(ret).detailed(c)}')
	}
}

pub fn (c &Client) set_proxy_url(url string) ! {
	ret := C.misskey_client_set_proxy_url(c.c_client, url.str)
	if ret != 0 {
		return error('set_proxy_url failed: ${MisskeyError(ret).detailed(c)}')
	}
}

pub fn (c &Client) clear_proxy() {
	C.misskey_client_clear_proxy(c.c_client)
}

pub fn (c &Client) get_last_error() (int, string) {
	mut http_code := 0
	mut error_detail := voidptr(0)
	C.misskey_client_get_last_error(c.c_client, &http_code, &error_detail)
	detail := if !isnil(error_detail) {
		unsafe { cstring_to_vstring(&char(error_detail)) }
	} else {
		''
	}
	return http_code, detail
}

fn (c &Client) get_error_msg() string {
	http_code, detail := c.get_last_error()
	if http_code > 0 {
		if detail.len > 0 {
			return 'HTTP ${http_code}: ${detail}'
		}
		return 'HTTP ${http_code}'
	}
	if detail.len > 0 {
		return detail
	}
	return ''
}

fn (c &Client) do_request(endpoint string, body string) !string {
	mut response := voidptr(0)
	ret := C.misskey_request(c.c_client, endpoint.str, body.str, &response)
	if ret != 0 {
		return error('${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}

pub fn (c &Client) meta_raw() !string {
	return c.do_request('meta', '{"detail":false}')
}

pub fn (c &Client) users_show_raw(user_id string, username string, host string, detailed bool) !string {
	user_id_cstr := if user_id.len > 0 { user_id.str } else { voidptr(0) }
	username_cstr := if username.len > 0 { username.str } else { voidptr(0) }
	host_cstr := if host.len > 0 { host.str } else { voidptr(0) }
	mut response := voidptr(0)
	ret := C.misskey_users_show_raw(c.c_client, user_id_cstr, username_cstr, host_cstr, if detailed { 1 } else { 0 }, &response)
	if ret != 0 {
		return error('users_show failed: ${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}

pub fn (c &Client) notes_timeline_raw(limit int, include_local_renotes bool) !string {
	local_val := if include_local_renotes { 1 } else { 0 }
	mut response := voidptr(0)
	ret := C.misskey_notes_timeline_raw(c.c_client, limit, local_val, &response)
	if ret != 0 {
		return error('notes_timeline failed: ${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}

pub fn (c &Client) notes_local_timeline_raw(limit int) !string {
	mut response := voidptr(0)
	ret := C.misskey_notes_local_timeline_raw(c.c_client, limit, &response)
	if ret != 0 {
		return error('notes_local_timeline failed: ${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}

pub fn (c &Client) notes_global_timeline_raw(limit int) !string {
	mut response := voidptr(0)
	ret := C.misskey_notes_global_timeline_raw(c.c_client, limit, &response)
	if ret != 0 {
		return error('notes_global_timeline failed: ${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}

// notes_create_raw - 创建笔记或转发（返回 JSON）
// @param text 笔记内容（可为空，用于纯转发）
// @param reply_id 回复目标ID（可为空）
// @param renote_id 转发目标ID（可为空，用于带文字转发）
pub fn (c &Client) notes_create_raw(text string, reply_id string, renote_id string) !string {
	reply_cstr := if reply_id.len > 0 { reply_id.str } else { voidptr(0) }
	renote_cstr := if renote_id.len > 0 { renote_id.str } else { voidptr(0) }
	mut response := voidptr(0)
	ret := C.misskey_notes_create_raw(c.c_client, text.str, reply_cstr, renote_cstr, &response)
	if ret != 0 {
		return error('notes_create failed: ${MisskeyError(ret).detailed(c)}')
	}
	result := unsafe { cstring_to_vstring(&char(response)) }
	C.misskey_free_string(c.c_client, &char(response))
	return result
}
